Stop using deprecated methods